--- a/src/qt/blocknetdx.qrc
+++ b/src/qt/blocknetdx.qrc
@@ -55,6 +55,7 @@
         <file alias="address-book-white">res/icons/address-book-white.png</file>
         <file alias="editpaste-white">res/icons/editpaste-white.png</file>
         <file>res/images/XC_256px.png</file>
+        <file>res/icons/XC.ico</file>
     </qresource>
     <qresource prefix="/css">
         <file alias="default">res/css/default.css</file>
