--- a/src/qt/forms/sendcoinsdialog.ui
+++ b/src/qt/forms/sendcoinsdialog.ui
@@ -54,7 +54,7 @@
        <number>6</number>
       </property>
       <item>
-       <layout class="QVBoxLayout" name="verticalLayoutCoinControl" stretch="0,0,0,0,1">
+          <layout class="QVBoxLayout" name="verticalLayoutCoinControl" stretch="0,0,0,0,0,1,0">
         <property name="spacing">
          <number>0</number>
         </property>
@@ -623,18 +623,81 @@
          </layout>
         </item>
         <item>
-         <spacer name="verticalSpacerCoinControl">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>800</width>
-            <height>1</height>
-           </size>
-          </property>
-         </spacer>
+            <spacer name="verticalSpacer_8">
+                <property name="orientation">
+                    <enum>Qt::Vertical</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                    <size>
+                        <width>20</width>
+                        <height>40</height>
+                    </size>
+                </property>
+            </spacer>
         </item>
+              <item>
+                  <spacer name="verticalSpacerCoinControl">
+                      <property name="orientation">
+                          <enum>Qt::Vertical</enum>
+                      </property>
+                      <property name="sizeHint" stdset="0">
+                          <size>
+                              <width>800</width>
+                              <height>1</height>
+                          </size>
+                      </property>
+                  </spacer>
+              </item>
+              <item>
+                  <layout class="QHBoxLayout" name="horizontalLayout_8">
+                      <item>
+                          <widget class="QCheckBox" name="txWithImage">
+                              <property name="text">
+                                  <string>Send document with transaction</string>
+                              </property>
+                          </widget>
+                      </item>
+                      <item>
+                          <widget class="QLineEdit" name="filePathEdit">
+                              <property name="sizePolicy">
+                                  <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+                                      <horstretch>0</horstretch>
+                                      <verstretch>0</verstretch>
+                                  </sizepolicy>
+                              </property>
+                              <property name="readOnly">
+                                  <bool>true</bool>
+                              </property>
+                          </widget>
+                      </item>
+                      <item>
+                          <widget class="QToolButton" name="pathButton">
+                              <property name="sizePolicy">
+                                  <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+                                      <horstretch>0</horstretch>
+                                      <verstretch>0</verstretch>
+                                  </sizepolicy>
+                              </property>
+                              <property name="text">
+                                  <string>...</string>
+                              </property>
+                          </widget>
+                      </item>
+                      <item>
+                          <spacer name="horizontalSpacer_7">
+                              <property name="orientation">
+                                  <enum>Qt::Horizontal</enum>
+                              </property>
+                              <property name="sizeHint" stdset="0">
+                                  <size>
+                                      <width>40</width>
+                                      <height>20</height>
+                                  </size>
+                              </property>
+                          </spacer>
+                      </item>
+                  </layout>
+              </item>
        </layout>
       </item>
      </layout>
@@ -651,10 +714,10 @@
         <x>0</x>
         <y>0</y>
         <width>830</width>
-        <height>144</height>
+           <height>80</height>
        </rect>
       </property>
-      <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,1">
+         <layout class="QVBoxLayout" name="verticalLayout_2" stretch="0,0">
        <property name="leftMargin">
         <number>0</number>
        </property>
